--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/SuicaDavid/LatestPosts#readme",
   "dependencies": {
+    "formidable": "^1.2.2",
     "htmlparser": "^1.7.7",
     "nimble": "0.0.2",
     "request": "^2.88.2"
