--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "body-parser": "^1.19.0",
     "connect": "^3.7.0",
     "cookie-parser": "^1.4.5",
+    "express": "^4.17.1",
     "formidable": "^1.2.2",
     "htmlparser": "^1.7.7",
     "morgan": "^1.10.0",
